[gd_scene load_steps=5 format=3 uid="uid://258t5hecdski"]

[ext_resource type="Texture2D" uid="uid://daocphvpem8rj" path="res://art/fire.png" id="1_hnhk3"]
[ext_resource type="Script" path="res://script/fire.gd" id="1_kijts"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4cbcv"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1nxxv"]
radius = 9.0

[node name="fire" type="Node2D"]
script = ExtResource("1_kijts")

[node name="fire" type="Sprite2D" parent="."]
texture = ExtResource("1_hnhk3")

[node name="burning" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="burning"]
shape = SubResource("CircleShape2D_4cbcv")

[node name="collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
z_index = -1
shape = SubResource("CircleShape2D_1nxxv")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="burning" to="." method="_on_burning_body_entered"]
[connection signal="body_exited" from="burning" to="." method="_on_burning_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
